--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <link rel = "stylesheet" href ="index.css">
 </head>
 <body>
-<h2>Welcome To</h2>
-<h1>FOODCASTEL</h1>
-<p>try something new</p>
+<img class = "image" src = "bowl.jpeg" alt = "poster">
+<div class = "title">
+  <h1>Welcome To <br> POTTERY's WORLD 陶 <br><br></h1>
+  <h3>"Ceramics is the art of turning earth into a beautiful form. We cater to people who love ceramics."
+  <br><br> "Breathtaking beauty from the inside out. There’s just something special about artisans and their creations."<br><br>"Ceramics are beautiful, but not as beautiful as the memories they evoke."</h3>
+  <button type="button">Book a Pottery Class</button>
+</div>
+
+
+
+
 </body>
 </html>
