just added landing page

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deployment exercise</title>
-  <link rel = "stylesheet" href ="index.css">
-</head>
-<body>
-<img class = "image" src = "bowl.jpeg" alt = "poster">
-<div class = "title">
-  <h1>Welcome To <br> POTTERY's WORLD 陶 <br><br></h1>
-  <h3>"Ceramics is the art of turning earth into a beautiful form. We cater to people who love ceramics."
-  <br><br> "Breathtaking beauty from the inside out. There’s just something special about artisans and their creations."<br><br>"Ceramics are beautiful, but not as beautiful as the memories they evoke."</h3>
-  <button type="button">Book a Pottery Class</button>
-</div>
-
-
-
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Deployment exercise</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <img class="image" src="bowl.jpeg" alt="poster" />
+    <div class="title">
+      <h1>
+        Welcome To <br />
+        POTTERY's WORLD 陶 <br /><br />
+      </h1>
+      <h3>
+        "Ceramics is the art of turning earth into a beautiful form. We cater to
+        people who love ceramics." <br /><br />
+        "Breathtaking beauty from the inside out. There’s just something special
+        about artisans and their creations."<br /><br />"Ceramics are beautiful,
+        but not as beautiful as the memories they evoke."
+      </h3>
+      <button type="button">Book a Pottery Class</button>
+    </div>
+  </body>
 </html>
