--- a/index.html
+++ b/index.html
@@ -5,7 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deployment exercise</title>
-    <link rel="stylesheet" href="index.css" />
+    <!-- <link rel="stylesheet" href="index.css" /> -->
+    <style>
+      .title {
+        color: #c5c3c6;
+        font-size: 20px;
+        font-style: italic;
+        height: 200px;
+        width: 250px;
+        /* display: block; */
+        position: relative;
+        padding-left: 100px;
+        padding-top: 100px;
+      }
+
+      h1 {
+        width: 600px;
+      }
+
+      .image {
+        display: block;
+        position: absolute;
+        height: 150%;
+        width: 98%;
+        margin: 10px;
+      }
+
+      button {
+        background-color: #6b9080;
+        border: none;
+        color: white;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        font-family: "Gill Sans", sans-serif;
+      }
+
+      button {
+        background-color: #abc4ab;
+        color: black;
+        border: 2px solid #6b9080;
+      }
+
+      button:hover {
+        background-color: #6b9080;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <img
