--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deployment exercise</title>
-    <!-- <link rel="stylesheet" href="index.css" /> -->
-    <style>
+    <link rel="stylesheet" href="/css" />
+    <!-- <style>
       .title {
         color: #c5c3c6;
         font-size: 20px;
@@ -56,7 +56,7 @@
         background-color: #6b9080;
         color: white;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <img
